Update getAllCategories to use toList() method